--- a/css/scss/_direction.scss
+++ b/css/scss/_direction.scss
@@ -22,6 +22,7 @@
         display: grid;
         grid-template-rows: 1fr 1fr;
         gap: 1rem;
+        overflow: hidden;
 
         .row {
             position: absolute;
